Compiler_C24061096_HW2/y.output
Nonterminals useless in grammar

   Elsestmt
   assign_op
   binary_op
   condition
   mul_op
   unary_op


Terminals unused in grammar

   VOID
   AND
   OR
   LAND
   LOR
   LEQ
   GEQ
   COMMA


Rules useless in parser due to conflicts

   19 StatementList: Statement


State 23 conflicts: 22 reduce/reduce
State 91 conflicts: 9 shift/reduce
State 92 conflicts: 9 shift/reduce
State 93 conflicts: 9 shift/reduce
State 94 conflicts: 9 shift/reduce
State 95 conflicts: 9 shift/reduce
State 102 conflicts: 9 shift/reduce
State 103 conflicts: 9 shift/reduce
State 104 conflicts: 9 shift/reduce
State 105 conflicts: 9 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Statement: DeclarationStmt NEWLINE
    5          | SimpleStmt NEWLINE
    6          | BLOCK NEWLINE
    7          | PrintStmt NEWLINE
    8          | IfStmt NEWLINE
    9          | Forstmt NEWLINE
   10          | NEWLINE

   11 DeclarationStmt: VAR IDENT Type ASSIGN Expression
   12                | VAR IDENT Type

   13 $@1: %empty

   14 $@2: %empty

   15 BLOCK: LBRACE $@1 StatementList $@2 RBRACE

   16 $@3: %empty

   17 $@4: %empty

   18 FBLOCK: LBRACE $@3 StatementList $@4 RBRACE

   19 StatementList: Statement

   20 SimpleStmt: Expression
   21           | IncDecStmt
   22           | AssignmentStmt

   23 AssignmentStmt: Expression ASSIGN Expression
   24               | Expression ADD_ASSIGN Expression
   25               | Expression SUB_ASSIGN Expression
   26               | Expression MUL_ASSIGN Expression
   27               | Expression QUO_ASSIGN Expression
   28               | Expression REM_ASSIGN Expression

   29 Expression: UnaryExpr
   30           | Expression ADD Expression
   31           | Expression SUB Expression
   32           | Expression MUL Expression
   33           | Expression DIV Expression
   34           | Expression REMAIN Expression
   35           | Expression EQL Expression
   36           | Expression NEQ Expression
   37           | Expression GTR Expression
   38           | Expression LSS Expression

   39 UnaryExpr: PrimaryExpr
   40          | ADD UnaryExpr
   41          | SUB UnaryExpr
   42          | NOT UnaryExpr

   43 PrimaryExpr: Operand
   44            | ConversionExpr
   45            | IndexExpr

   46 IndexExpr: PrimaryExpr LBRACK Expression RBRACK

   47 Operand: Literal
   48        | IDENT

   49 Literal: INT_LIT
   50        | FLOAT_LIT
   51        | STRING_LIT
   52        | BOOL_LIT

   53 ConversionExpr: Type LPAREN Expression RPAREN

   54 IfStmt: IF Expression BLOCK
   55       | IF Expression BLOCK ELSE BLOCK
   56       | IF Expression BLOCK ELSE IfStmt

   57 Forstmt: FOR Expression FBLOCK
   58        | FOR Forclause FBLOCK

   59 Forclause: SimpleStmt SEMICOLON Expression SEMICOLON SimpleStmt

   60 PrintStmt: PRINT LPAREN Expression RPAREN
   61          | PRINTLN LPAREN Expression RPAREN

   62 IncDecStmt: Expression INC
   63           | Expression DEC

   64 Type: TypeName
   65     | ArrayType

   66 TypeName: INT
   67         | FLOAT
   68         | STRING
   69         | BOOL

   70 ArrayType: LBRACK Expression RBRACK Type


Terminals, with rules where they appear

$end (0) 0
error (256)
VAR (258) 11 12
INT (259) 66
FLOAT (260) 67
BOOL (261) 69
STRING (262) 68
VOID (263)
AND (264)
OR (265)
NOT (266) 42
LPAREN (267) 53 60 61
RPAREN (268) 53 60 61
LBRACK (269) 46 70
RBRACK (270) 46 70
LBRACE (271) 15 18
RBRACE (272) 15 18
ADD (273) 30 40
SUB (274) 31 41
MUL (275) 32
DIV (276) 33
REMAIN (277) 34
INC (278) 62
DEC (279) 63
ASSIGN (280) 11 23
ADD_ASSIGN (281) 24
SUB_ASSIGN (282) 25
MUL_ASSIGN (283) 26
QUO_ASSIGN (284) 27
REM_ASSIGN (285) 28
PRINT (286) 60
PRINTLN (287) 61
NEWLINE (288) 4 5 6 7 8 9 10
LAND (289)
LOR (290)
IF (291) 54 55 56
ELSE (292) 55 56
FOR (293) 57 58
EQL (294) 35
NEQ (295) 36
LSS (296) 38
LEQ (297)
GTR (298) 37
GEQ (299)
SEMICOLON (300) 59
COMMA (301)
INT_LIT (302) 49
FLOAT_LIT (303) 50
STRING_LIT (304) 51
IDENT (305) 11 12 48
BOOL_LIT (306) 52


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
StatementList (54)
    on left: 2 3 19, on right: 1 2 15 18
Statement (55)
    on left: 4 5 6 7 8 9 10, on right: 2 3 19
DeclarationStmt (56)
    on left: 11 12, on right: 4
BLOCK (57)
    on left: 15, on right: 6 54 55 56
$@1 (58)
    on left: 13, on right: 15
$@2 (59)
    on left: 14, on right: 15
FBLOCK (60)
    on left: 18, on right: 57 58
$@3 (61)
    on left: 16, on right: 18
$@4 (62)
    on left: 17, on right: 18
SimpleStmt (63)
    on left: 20 21 22, on right: 5 59
AssignmentStmt (64)
    on left: 23 24 25 26 27 28, on right: 22
Expression (65)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 11 20 23 24 25
    26 27 28 30 31 32 33 34 35 36 37 38 46 53 54 55 56 57 59 60 61
    62 63 70
UnaryExpr (66)
    on left: 39 40 41 42, on right: 29 40 41 42
PrimaryExpr (67)
    on left: 43 44 45, on right: 39 46
IndexExpr (68)
    on left: 46, on right: 45
Operand (69)
    on left: 47 48, on right: 43
Literal (70)
    on left: 49 50 51 52, on right: 47
ConversionExpr (71)
    on left: 53, on right: 44
IfStmt (72)
    on left: 54 55 56, on right: 8 56
Forstmt (73)
    on left: 57 58, on right: 9
Forclause (74)
    on left: 59, on right: 58
PrintStmt (75)
    on left: 60 61, on right: 7
IncDecStmt (76)
    on left: 62 63, on right: 21
Type (77)
    on left: 64 65, on right: 11 12 53 70
TypeName (78)
    on left: 66 67 68 69, on right: 64
ArrayType (79)
    on left: 70, on right: 65


State 0

    0 $accept: . Program $end

    VAR         shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    NOT         shift, and go to state 6
    LBRACK      shift, and go to state 7
    LBRACE      shift, and go to state 8
    ADD         shift, and go to state 9
    SUB         shift, and go to state 10
    PRINT       shift, and go to state 11
    PRINTLN     shift, and go to state 12
    NEWLINE     shift, and go to state 13
    IF          shift, and go to state 14
    FOR         shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    STRING_LIT  shift, and go to state 18
    IDENT       shift, and go to state 19
    BOOL_LIT    shift, and go to state 20

    Program          go to state 21
    StatementList    go to state 22
    Statement        go to state 23
    DeclarationStmt  go to state 24
    BLOCK            go to state 25
    SimpleStmt       go to state 26
    AssignmentStmt   go to state 27
    Expression       go to state 28
    UnaryExpr        go to state 29
    PrimaryExpr      go to state 30
    IndexExpr        go to state 31
    Operand          go to state 32
    Literal          go to state 33
    ConversionExpr   go to state 34
    IfStmt           go to state 35
    Forstmt          go to state 36
    PrintStmt        go to state 37
    IncDecStmt       go to state 38
    Type             go to state 39
    TypeName         go to state 40
    ArrayType        go to state 41


State 1

   11 DeclarationStmt: VAR . IDENT Type ASSIGN Expression
   12                | VAR . IDENT Type

    IDENT  shift, and go to state 42


State 2

   66 TypeName: INT .

    $default  reduce using rule 66 (TypeName)


State 3

   67 TypeName: FLOAT .

    $default  reduce using rule 67 (TypeName)


State 4

   69 TypeName: BOOL .

    $default  reduce using rule 69 (TypeName)


State 5

   68 TypeName: STRING .

    $default  reduce using rule 68 (TypeName)


State 6

   42 UnaryExpr: NOT . UnaryExpr

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    NOT         shift, and go to state 6
    LBRACK      shift, and go to state 7
    ADD         shift, and go to state 9
    SUB         shift, and go to state 10
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    STRING_LIT  shift, and go to state 18
    IDENT       shift, and go to state 19
    BOOL_LIT    shift, and go to state 20

    UnaryExpr       go to state 43
    PrimaryExpr     go to state 30
    IndexExpr       go to state 31
    Operand         go to state 32
    Literal         go to state 33
    ConversionExpr  go to state 34
    Type            go to state 39
    TypeName        go to state 40
    ArrayType       go to state 41


State 7

   70 ArrayType: LBRACK . Expression RBRACK Type

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    NOT         shift, and go to state 6
    LBRACK      shift, and go to state 7
    ADD         shift, and go to state 9
    SUB         shift, and go to state 10
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    STRING_LIT  shift, and go to state 18
    IDENT       shift, and go to state 19
    BOOL_LIT    shift, and go to state 20

    Expression      go to state 44
    UnaryExpr       go to state 29
    PrimaryExpr     go to state 30
    IndexExpr       go to state 31
    Operand         go to state 32
    Literal         go to state 33
    ConversionExpr  go to state 34
    Type            go to state 39
    TypeName        go to state 40
    ArrayType       go to state 41


State 8

   15 BLOCK: LBRACE . $@1 StatementList $@2 RBRACE

    $default  reduce using rule 13 ($@1)

    $@1  go to state 45


State 9

   40 UnaryExpr: ADD . UnaryExpr

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    NOT         shift, and go to state 6
    LBRACK      shift, and go to state 7
    ADD         shift, and go to state 9
    SUB         shift, and go to state 10
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    STRING_LIT  shift, and go to state 18
    IDENT       shift, and go to state 19
    BOOL_LIT    shift, and go to state 20

    UnaryExpr       go to state 46
    PrimaryExpr     go to state 30
    IndexExpr       go to state 31
    Operand         go to state 32
    Literal         go to state 33
    ConversionExpr  go to state 34
    Type            go to state 39
    TypeName        go to state 40
    ArrayType       go to state 41


State 10

   41 UnaryExpr: SUB . UnaryExpr

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    NOT         shift, and go to state 6
    LBRACK      shift, and go to state 7
    ADD         shift, and go to state 9
    SUB         shift, and go to state 10
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    STRING_LIT  shift, and go to state 18
    IDENT       shift, and go to state 19
    BOOL_LIT    shift, and go to state 20

    UnaryExpr       go to state 47
    PrimaryExpr     go to state 30
    IndexExpr       go to state 31
    Operand         go to state 32
    Literal         go to state 33
    ConversionExpr  go to state 34
    Type            go to state 39
    TypeName        go to state 40
    ArrayType       go to state 41


State 11

   60 PrintStmt: PRINT . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 48


State 12

   61 PrintStmt: PRINTLN . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 49


State 13

   10 Statement: NEWLINE .

    $default  reduce using rule 10 (Statement)


State 14

   54 IfStmt: IF . Expression BLOCK
   55       | IF . Expression BLOCK ELSE BLOCK
   56       | IF . Expression BLOCK ELSE IfStmt

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    NOT         shift, and go to state 6
    LBRACK      shift, and go to state 7
    ADD         shift, and go to state 9
    SUB         shift, and go to state 10
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    STRING_LIT  shift, and go to state 18
    IDENT       shift, and go to state 19
    BOOL_LIT    shift, and go to state 20

    Expression      go to state 50
    UnaryExpr       go to state 29
    PrimaryExpr     go to state 30
    IndexExpr       go to state 31
    Operand         go to state 32
    Literal         go to state 33
    ConversionExpr  go to state 34
    Type            go to state 39
    TypeName        go to state 40
    ArrayType       go to state 41


State 15

   57 Forstmt: FOR . Expression FBLOCK
   58        | FOR . Forclause FBLOCK

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    NOT         shift, and go to state 6
    LBRACK      shift, and go to state 7
    ADD         shift, and go to state 9
    SUB         shift, and go to state 10
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    STRING_LIT  shift, and go to state 18
    IDENT       shift, and go to state 19
    BOOL_LIT    shift, and go to state 20

    SimpleStmt      go to state 51
    AssignmentStmt  go to state 27
    Expression      go to state 52
    UnaryExpr       go to state 29
    PrimaryExpr     go to state 30
    IndexExpr       go to state 31
    Operand         go to state 32
    Literal         go to state 33
    ConversionExpr  go to state 34
    Forclause       go to state 53
    IncDecStmt      go to state 38
    Type            go to state 39
    TypeName        go to state 40
    ArrayType       go to state 41


State 16

   49 Literal: INT_LIT .

    $default  reduce using rule 49 (Literal)


State 17

   50 Literal: FLOAT_LIT .

    $default  reduce using rule 50 (Literal)


State 18

   51 Literal: STRING_LIT .

    $default  reduce using rule 51 (Literal)


State 19

   48 Operand: IDENT .

    $default  reduce using rule 48 (Operand)


State 20

   52 Literal: BOOL_LIT .

    $default  reduce using rule 52 (Literal)


State 21

    0 $accept: Program . $end

    $end  shift, and go to state 54


State 22

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    VAR         shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    NOT         shift, and go to state 6
    LBRACK      shift, and go to state 7
    LBRACE      shift, and go to state 8
    ADD         shift, and go to state 9
    SUB         shift, and go to state 10
    PRINT       shift, and go to state 11
    PRINTLN     shift, and go to state 12
    NEWLINE     shift, and go to state 13
    IF          shift, and go to state 14
    FOR         shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    STRING_LIT  shift, and go to state 18
    IDENT       shift, and go to state 19
    BOOL_LIT    shift, and go to state 20

    $default  reduce using rule 1 (Program)

    Statement        go to state 55
    DeclarationStmt  go to state 24
    BLOCK            go to state 25
    SimpleStmt       go to state 26
    AssignmentStmt   go to state 27
    Expression       go to state 28
    UnaryExpr        go to state 29
    PrimaryExpr      go to state 30
    IndexExpr        go to state 31
    Operand          go to state 32
    Literal          go to state 33
    ConversionExpr   go to state 34
    IfStmt           go to state 35
    Forstmt          go to state 36
    PrintStmt        go to state 37
    IncDecStmt       go to state 38
    Type             go to state 39
    TypeName         go to state 40
    ArrayType        go to state 41


State 23

    3 StatementList: Statement .
   19              | Statement .

    $end        reduce using rule 3 (StatementList)
    $end        [reduce using rule 19 (StatementList)]
    VAR         reduce using rule 3 (StatementList)
    VAR         [reduce using rule 19 (StatementList)]
    INT         reduce using rule 3 (StatementList)
    INT         [reduce using rule 19 (StatementList)]
    FLOAT       reduce using rule 3 (StatementList)
    FLOAT       [reduce using rule 19 (StatementList)]
    BOOL        reduce using rule 3 (StatementList)
    BOOL        [reduce using rule 19 (StatementList)]
    STRING      reduce using rule 3 (StatementList)
    STRING      [reduce using rule 19 (StatementList)]
    NOT         reduce using rule 3 (StatementList)
    NOT         [reduce using rule 19 (StatementList)]
    LBRACK      reduce using rule 3 (StatementList)
    LBRACK      [reduce using rule 19 (StatementList)]
    LBRACE      reduce using rule 3 (StatementList)
    LBRACE      [reduce using rule 19 (StatementList)]
    RBRACE      reduce using rule 3 (StatementList)
    RBRACE      [reduce using rule 19 (StatementList)]
    ADD         reduce using rule 3 (StatementList)
    ADD         [reduce using rule 19 (StatementList)]
    SUB         reduce using rule 3 (StatementList)
    SUB         [reduce using rule 19 (StatementList)]
    PRINT       reduce using rule 3 (StatementList)
    PRINT       [reduce using rule 19 (StatementList)]
    PRINTLN     reduce using rule 3 (StatementList)
    PRINTLN     [reduce using rule 19 (StatementList)]
    NEWLINE     reduce using rule 3 (StatementList)
    NEWLINE     [reduce using rule 19 (StatementList)]
    IF          reduce using rule 3 (StatementList)
    IF          [reduce using rule 19 (StatementList)]
    FOR         reduce using rule 3 (StatementList)
    FOR         [reduce using rule 19 (StatementList)]
    INT_LIT     reduce using rule 3 (StatementList)
    INT_LIT     [reduce using rule 19 (StatementList)]
    FLOAT_LIT   reduce using rule 3 (StatementList)
    FLOAT_LIT   [reduce using rule 19 (StatementList)]
    STRING_LIT  reduce using rule 3 (StatementList)
    STRING_LIT  [reduce using rule 19 (StatementList)]
    IDENT       reduce using rule 3 (StatementList)
    IDENT       [reduce using rule 19 (StatementList)]
    BOOL_LIT    reduce using rule 3 (StatementList)
    BOOL_LIT    [reduce using rule 19 (StatementList)]
    $default    reduce using rule 3 (StatementList)


State 24

    4 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 56


State 25

    6 Statement: BLOCK . NEWLINE

    NEWLINE  shift, and go to state 57


State 26

    5 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 58


State 27

   22 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 22 (SimpleStmt)


State 28
